// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderType: DATE > Default full function 1`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "dateOperator": "date",
          "operator": "equal",
          "property": "Date0",
          "value": {
            "dateType": "static",
            "value": "1690473600",
          },
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: DATE > Default full function 2`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "dateOperator": "date",
          "operator": "equal",
          "property": "Date0",
          "value": {
            "dateFrom": "- 0 days",
            "dateTo": "- 0 days",
            "dateType": "dynamic",
          },
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;

exports[`renderType: DATE > Default full function 3`] = `
{
  "filters": [
    {
      "conditions": [
        {
          "dateOperator": "date",
          "operator": "equal",
          "property": "Date0",
          "value": {
            "dateFrom": "- 2 days",
            "dateTo": "- 0 days",
            "dateType": "dynamic",
          },
        },
      ],
      "logicalOperator": "and",
    },
  ],
  "logicalOperator": "and",
}
`;
